--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "topcoder"
   ],
   "scripts": {
+    "lint": "standard --env mocha",
+    "lint:fix": "standard --fix --env mocha",
     "test": "atom --test --timeout 60 ./spec/api-spec.js ./spec/utils-spec.js ./spec/topcoder-spec.js"
   },
   "dependencies": {
@@ -36,6 +38,17 @@
   },
   "devDependencies": {
     "mock-fs": "^4.10.1",
-    "nock": "^10.0.6"
+    "nock": "^10.0.6",
+    "standard": "^13.1.0"
+  },
+  "standard": {
+    "globals": [
+      "expect",
+      "atom",
+      "runs",
+      "waitsFor",
+      "waitsForPromise",
+      "localStorage"
+    ]
   }
 }
